--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0"
