--- a/backend/package.json
+++ b/backend/package.json
@@ -12,16 +12,18 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^4.18.2",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
     "express-list-endpoints": "^7.1.1",
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
+    "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
+    "path": "^0.12.7",
     "pdfkit": "^0.17.1",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
