--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,10 @@
     "path": "^0.12.7",
     "pdfkit": "^0.17.1",
     "pg": "^8.16.3",
+    "puppeteer": "^24.16.2",
     "qrcode": "^1.5.4",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
